acabei de subir o inde.html

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <li>Crie um arquivo chamado README.MD e dentro dele comente sobre o seu projeto</li>
         <li>agora ela ficou na pasta master.</li>
         <li>agora digite: git add README.MD</li>
+        <li>para enviar todos os arquivos basta digita: git add .</li>
         <li>ele acabou de enviar o arquivo para o git, otimo, entao vamos para o proximo passo</li>
         <li>digite: git status</li>
         <li>ele ira mostrar como esta a nosta lista de arquviso enviados e pendentes</li>
         <li>digite: git commit -m "Enviando meu primeiro arquivo"</li>
+        <li></li>
 
     </ul>
 </body>
