criação do projeto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li>digite: git status</li>
         <li>ele ira mostrar como esta a nosta lista de arquviso enviados e pendentes</li>
         <li>digite: git commit -m "Enviando meu primeiro arquivo"</li>
-        <li></li>
+        <li>quanbdo vc cria um novo projeto no github ele jamostra os comandos....</li>
+        <li>assim sendo vamso ter q mudar tudo</li>
 
     </ul>
 </body>
