--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <li>digite: git commit -m "Enviando meu primeiro arquivo"</li>
         <li>quanbdo vc cria um novo projeto no github ele jamostra os comandos....</li>
         <li>assim sendo vamso ter q mudar tudo</li>
+        <li>git add .  envia tudo</li>
+        <li>status  verifica o q tem de modificaçã</li>
+        <li>git commit -m "msg que quiser"  para explicxar o q mudou no arquivo</li>
+        <li>git push origin master(main)   para enviar os arquivos para o github</li>
+        <li>git checkout -b "nova_acao"</li>
+        <li>ele faz com que eu crie uma nova area de desenvolvimento como um botao novo no site</li>
+        <li>crie o arquivos botao.html</li>
+        <li>adicione o arquivo ao projeto: git add .</li>
 
     </ul>
 </body>
